@@ -43,6 +43,14 @@ func createMinipool(c *cli.Context) error {
 	if err != nil {
 		return err
 	}
+	cfg, _, err := hd.LoadConfig()
+	if err != nil {
+		return fmt.Errorf("error loading Hyperdrive config: %w", err)
+	}
+	if !cfg.Constellation.Enabled.Value {
+		fmt.Println("The Constellation module is not enabled in your Hyperdrive configuration.")
+		return nil
+	}
 
 	// Get the minipool salt
 	var salt *big.Int
