@@ -32,6 +32,14 @@ func uploadSignedExits(c *cli.Context) error {
 	if err != nil {
 		return err
 	}
+	cfg, _, err := hd.LoadConfig()
+	if err != nil {
+		return fmt.Errorf("error loading Hyperdrive config: %w", err)
+	}
+	if !cfg.Constellation.Enabled.Value {
+		fmt.Println("The Constellation module is not enabled in your Hyperdrive configuration.")
+		return nil
+	}
 
 	// Get the details about each minipool
 	var selectedMinipools []*csapi.MinipoolExitDetails
