@@ -33,6 +33,14 @@ func generateDepositData(c *cli.Context) error {
 	if err != nil {
 		return err
 	}
+	cfg, _, err := hd.LoadConfig()
+	if err != nil {
+		return fmt.Errorf("error loading Hyperdrive config: %w", err)
+	}
+	if !cfg.StakeWise.Enabled.Value {
+		fmt.Println("The StakeWise module is not enabled in your Hyperdrive configuration.")
+		return nil
+	}
 
 	// Parse the pubkeys
 	pubkeyStrings := c.StringSlice(generatePubkeyFlag.Name)
