@@ -1,6 +1,8 @@
 package nodeset
 
 import (
+	"fmt"
+
 	"github.com/nodeset-org/hyperdrive/hyperdrive-cli/client"
 	swcmdutils "github.com/nodeset-org/hyperdrive/hyperdrive-cli/commands/stakewise/utils"
 	"github.com/urfave/cli/v2"
@@ -15,6 +17,14 @@ func uploadDepositData(c *cli.Context) error {
 	sw, err := client.NewStakewiseClientFromCtx(c, hd)
 	if err != nil {
 		return err
+	}
+	cfg, _, err := hd.LoadConfig()
+	if err != nil {
+		return fmt.Errorf("error loading Hyperdrive config: %w", err)
+	}
+	if !cfg.StakeWise.Enabled.Value {
+		fmt.Println("The StakeWise module is not enabled in your Hyperdrive configuration.")
+		return nil
 	}
 
 	// Upload to the server
