@@ -20,6 +20,14 @@ func getNodeStatus(c *cli.Context) error {
 	if err != nil {
 		return err
 	}
+	cfg, _, err := hd.LoadConfig()
+	if err != nil {
+		return fmt.Errorf("error loading Hyperdrive config: %w", err)
+	}
+	if !cfg.StakeWise.Enabled.Value {
+		fmt.Println("The StakeWise module is not enabled in your Hyperdrive configuration.")
+		return nil
+	}
 
 	// Check the registration status first
 	shouldContinue, err := nodeset.CheckRegistrationStatus(c, hd)
