@@ -22,6 +22,14 @@ func claimRewards(c *cli.Context) error {
 	if err != nil {
 		return err
 	}
+	cfg, _, err := hd.LoadConfig()
+	if err != nil {
+		return fmt.Errorf("error loading Hyperdrive config: %w", err)
+	}
+	if !cfg.StakeWise.Enabled.Value {
+		fmt.Println("The StakeWise module is not enabled in your Hyperdrive configuration.")
+		return nil
+	}
 
 	// Check if there's a node address ready
 	_, ready, err := utils.CheckIfAddressReady(hd)
